added booster prototype
Signed-off-by: Anh-Kagi <anh.kagi@protonmail.com>

--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,8 @@
 
 <body class="bg-dark vw-100 vh-100">
   <div class="container d-flex flex-column align-content-center position-absolute top-50 start-50 translate-middle">
-    <h1 class="display-1 text-center mb-5" style="color:#fff">Natural The Scattering</h1>
+    <h1 class="display-1 text-center mb-5 text-white">Natural The Scattering</h1>
+    <h3 class="display-3 text-center mb-5 text-white">by Peons of the Barn (c)</h3>
 
     <div class="btn-group-vertical btn-group-lg mx-auto" role="group" aria-label="Partie">
       <button type="button" class="btn btn-primary">Tournoi</button>
@@ -19,7 +20,7 @@
   </div>
 
   <div class="btn-group-vertical btn-group-lg m-2 position-absolute bottom-0 start-0" role="group" aria-label="Cartes">
-    <button type="button" class="btn btn-secondary">Booster</button>
+    <a type="button" class="btn btn-secondary" href="./carte/booster.html">Booster</a>
     <button type="button" class="btn btn-secondary">Decks</button>
     <button type="button" class="btn btn-secondary">Collection</button>
     <button type="button" class="btn btn-primary">Cartes</button>
@@ -32,10 +33,6 @@
     <button type="button" class="btn btn-secondary">Amis</button>
     <button type="button" class="btn btn-primary">Communauté</button>
   </div>
-
-  <style>
-
-  </style>
 </body>
 
 </html>
