--- a/html/carte/booster.html
+++ b/html/carte/booster.html
@@ -11,7 +11,7 @@
 <body class="bg-dark vw-100 vh-100">
   <div class="container rounded d-flex flex-row bg-secondary p-5 position-absolute top-50 start-50 translate-middle">
     <button type="button" class="btn btn-primary btn-lg position-absolute m-0 top-50 start-50 translate-middle">Ouvrir un Booster</button>
-    <a type="button" class="btn-close bg-dark position-absolute top-0 end-0 translate-middle" aria-label="Close" href="../index.html"></a>
+    <a type="button" class="btn-close bg-dark position-absolute top-0 end-0 translate-middle" aria-label="Home" href="../index.html"></a>
   </div>
 </body>
 
