--- a/html/index.html
+++ b/html/index.html
@@ -22,7 +22,7 @@
   <div class="btn-group-vertical btn-group-lg m-2 position-absolute bottom-0 start-0" role="group" aria-label="Cartes">
     <a type="button" class="btn btn-secondary" href="./carte/booster.html">Booster</a>
     <a type="button" class="btn btn-secondary" href="./carte/deck.html">Decks</a>
-    <button type="button" class="btn btn-secondary">Collection</button>
+    <a type="button" class="btn btn-secondary" href="./carte/collection.html">Collection</a>
     <button type="button" class="btn btn-primary">Cartes</button>
   </div>
 
