--- a/html/carte/deck.html
+++ b/html/carte/deck.html
@@ -8,8 +8,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </head>
 
-<body class="bg-dark vw-100 vh-100">
-  <div class="container rounded d-flex flex-column bg-secondary p-3 align-content-center position-absolute top-50 start-50 translate-middle">
+<body class="bg-dark vw-100">
+  <div class="container rounded d-flex flex-column bg-secondary p-3 align-content-center ms-auto">
     <h1 class="text-center mb-5 text-white">Gestion de decks</h1>
 
     <div class="container bg-dark rounded p-3">
