--- a/html/index.html
+++ b/html/index.html
@@ -27,7 +27,7 @@
   </div>
 
   <div class="btn-group-vertical btn-group-lg m-2 position-absolute bottom-0 end-0" role="group" aria-label="Communauté">
-    <button type="button" class="btn btn-secondary">Hôtel des ventes</button>
+    <a type="button" class="btn btn-secondary" href="./communaute/hdvente.html">Hôtel des ventes</a>
     <button type="button" class="btn btn-secondary">Forums</button>
     <button type="button" class="btn btn-secondary">Guilde</button>
     <button type="button" class="btn btn-secondary">Amis</button>
