--- a/html/index.html
+++ b/html/index.html
@@ -28,7 +28,7 @@
 
   <div class="btn-group-vertical btn-group-lg m-2 position-absolute bottom-0 end-0" role="group" aria-label="Communauté">
     <a type="button" class="btn btn-secondary" href="./communaute/hdvente.html">Hôtel des ventes</a>
-    <button type="button" class="btn btn-secondary">Forums</button>
+    <a type="button" class="btn btn-secondary" href="./communaute/forum.html">Forums</a>
     <button type="button" class="btn btn-secondary">Guilde</button>
     <button type="button" class="btn btn-secondary">Amis</button>
     <button type="button" class="btn btn-primary">Communauté</button>
