fixed horizontal scroller
hiding horizontal overflow when vertical scroller appears

Signed-off-by: Anh-Kagi <anh.kagi@protonmail.com>

--- a/html/communaute/forum.html
+++ b/html/communaute/forum.html
@@ -9,8 +9,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css">
 </head>
 
-<body class="bg-dark vw-100 p-5">
-  <div class="container rounded d-flex flex-column ms-auto p-3 bg-secondary container">
+<body class="bg-dark vw-100 p-5 overflow-hidden">
+  <div class="container rounded d-flex flex-column ms-auto p-3 bg-secondary position-relative">
     <h1 class="text-center">Forums</h1>
 
     <hr/>
@@ -37,7 +37,7 @@
       </a>
     </div>
 
-    <a type="button" class="btn-close bg-dark position-absolute top-0 end-0 translate-middle" aria-label="Home" href="../index.html"></a>
+    <a type="button" class="btn-close bg-danger position-absolute top-0 end-0 translate-middle" aria-label="Home" href="../"></a>
   </div>
 </body>
 
