--- a/html/communaute/thread.html
+++ b/html/communaute/thread.html
@@ -9,12 +9,12 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css">
 </head>
 
-<body class="bg-dark vw-100 p-5">
-  <div class="container rounded d-flex flex-column ms-auto p-3 bg-secondary container">
+<body class="bg-dark vw-99 p-5 overflow-hidden">
+  <div class="container rounded d-flex flex-column ms-auto p-3 bg-secondary position-relative">
     <h1 class="text-center">Is Exodia le maudit that powerful?</h1>
 
     <div class="container rounded bg-dark p-0 d-flex flex-column">
-      <div class="container rounded d-flex flex-row w-auto p-1 m-2 bg-secondary text-decoration-none text-white" href="./thread.html">
+      <div class="container rounded d-flex flex-row w-auto p-1 m-2 bg-secondary text-decoration-none text-white">
         <!-- author icon's -->
         <svg xmlns="http://www.w3.org/2000/svg" width="3em" height="3em" fill="white" class="bi bi-person-circle" viewBox="0 0 16 16">
           <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
@@ -32,7 +32,7 @@
         </div>
       </div>
 
-      <div class="container rounded d-flex flex-row w-auto p-1 m-2 bg-secondary text-decoration-none text-white" href="./thread.html">
+      <div class="container rounded d-flex flex-row w-auto p-1 m-2 bg-secondary text-decoration-none text-white">
         <!-- author icon's -->
         <svg xmlns="http://www.w3.org/2000/svg" width="3em" height="3em" fill="white" class="bi bi-person-circle" viewBox="0 0 16 16">
           <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
@@ -48,7 +48,7 @@
         </div>
       </div>
 
-      <div class="container rounded d-flex flex-row w-auto p-1 m-2 bg-secondary text-decoration-none text-white" href="./thread.html">
+      <div class="container rounded d-flex flex-row w-auto p-1 m-2 bg-secondary text-decoration-none text-white">
         <!-- author icon's -->
         <svg xmlns="http://www.w3.org/2000/svg" width="3em" height="3em" fill="white" class="bi bi-person-circle" viewBox="0 0 16 16">
           <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
@@ -70,7 +70,7 @@
       </div>
     </div>
 
-    <a type="button" class="btn-close bg-dark position-absolute top-0 end-0 translate-middle" aria-label="Home" href="./forum.html"></a>
+    <a type="button" class="btn-close bg-danger position-absolute top-0 end-0 translate-middle" aria-label="Home" href="./forum.html"></a>
   </div>
 </body>
 
