--- a/html/carte/booster.html
+++ b/html/carte/booster.html
@@ -8,10 +8,10 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </head>
 
-<body class="bg-dark vw-100 vh-100">
-  <div class="container rounded d-flex flex-row bg-secondary p-5 position-absolute top-50 start-50 translate-middle">
-    <button type="button" class="btn btn-primary btn-lg position-absolute m-0 top-50 start-50 translate-middle">Ouvrir un Booster</button>
-    <a type="button" class="btn-close bg-dark position-absolute top-0 end-0 translate-middle" aria-label="Home" href="../index.html"></a>
+<body class="bg-dark vw-99 p-5 overflow-hidden">
+  <div class="container rounded d-flex flex-row align-items-center bg-secondary position-relative mx-auto p-5">
+    <button type="button" class="btn btn-primary btn-lg mx-auto">Ouvrir un Booster</button>
+    <a type="button" class="btn-close bg-danger position-absolute end-0 top-0 translate-middle" aria-label="Home" href="../"></a>
   </div>
 </body>
 
