--- a/html/carte/collection.html
+++ b/html/carte/collection.html
@@ -8,8 +8,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </head>
 
-<body class="bg-dark vw-100 p-5">
-  <div class="container rounded bg-secondary p-3 ms-auto">
+<body class="bg-dark vw-99 p-5 overflow-hidden">
+  <div class="container rounded bg-secondary p-3 position-relative ms-auto">
     <h1 class="text-center mb-5 text-white">Collection</h1>
 
     <div class="container d-flex flex-row flex-wrap align-content-centerbg-dark rounded p-3">
@@ -84,7 +84,7 @@
         </div>
     </div>
 
-    <a type="button" class="btn-close bg-dark position-absolute top-0 end-0 translate-middle" aria-label="Home" href="../index.html"></a>
+    <a type="button" class="btn-close bg-danger position-absolute top-0 end-0 translate-middle" aria-label="Home" href="../"></a>
   </div>
 </body>
 
