--- a/html/carte/deck.html
+++ b/html/carte/deck.html
@@ -8,11 +8,11 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </head>
 
-<body class="bg-dark vw-100">
-  <div class="container rounded d-flex flex-column bg-secondary p-3 align-content-center ms-auto">
+<body class="bg-dark vw-99 p-5 overflow-hidden">
+  <div class="container rounded d-flex flex-column bg-secondary p-3 align-content-center position-relative ms-auto">
     <h1 class="text-center mb-5 text-white">Gestion de decks</h1>
 
-    <div class="container bg-dark rounded p-3">
+    <div class="container bg-dark rounded position-relative p-3">
       <div class="d-flex flex-row overflow-scroll">
         <div class="card flex-shrink-0 m-2" style="width: 18rem;">
           <!-- SVG placeholder -->
@@ -31,7 +31,7 @@
       <button type="button" class="btn-close bg-danger position-absolute top-0 end-0 translate-middle" aria-label="Delete"></button>
     </div>
 
-    <a type="button" class="btn-close bg-dark position-absolute top-0 end-0 translate-middle" aria-label="Home" href="../index.html"></a>
+    <a type="button" class="btn-close bg-danger position-absolute top-0 end-0 translate-middle" aria-label="Home" href="../"></a>
   </div>
 </body>
 
