--- a/html/communaute/hdvente.html
+++ b/html/communaute/hdvente.html
@@ -8,8 +8,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </head>
 
-<body class="bg-dark vw-100 p-5">
-  <div class="container rounded ms-auto p-3 bg-secondary container">
+<body class="bg-dark vw-99 p-5 overflow-hidden">
+  <div class="container rounded position-relative w-auto mx-auto p-3 m-0 bg-secondary">
     <h1 class="text-center">Hôtel des ventes</h1>
     <hr/>
     <div class="container rounded d-flex flex-column bg-dark text-center text-white">
@@ -29,7 +29,7 @@
       </div>
     </div>
     <hr/>
-    <div class="container rounded d-flex flex-row flex-wrap bg-dark text-center">
+    <div class="container rounded d-flex flex-row flex-wrap justify-content-center bg-dark text-center">
       <div class="card flex-shrink-0 m-2" style="width: 18rem;">
         <!-- SVG placeholder -->
         <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
@@ -136,7 +136,7 @@
       </div>
     </div>
 
-    <a type="button" class="btn-close bg-dark position-absolute top-0 end-0 translate-middle" aria-label="Home" href="../index.html"></a>
+    <a type="button" class="btn-close bg-danger position-absolute top-0 end-0 translate-middle" aria-label="Home" href="../"></a>
   </div>
 </body>
 
