--- a/html/communaute/hdvente.html
+++ b/html/communaute/hdvente.html
@@ -8,7 +8,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </head>
 
-<body class="bg-dark vw-99 p-5 overflow-hidden">
+<body class="bg-dark vw-100 p-5 overflow-x-hidden">
   <div class="container rounded position-relative w-auto mx-auto p-3 m-0 bg-secondary">
     <h1 class="text-center">Hôtel des ventes</h1>
     <hr/>
