added links for guilde and amis
Signed-off-by: Anh-Kagi <anh.kagi@protonmail.com>

--- a/html/index.html
+++ b/html/index.html
@@ -29,8 +29,8 @@
   <div class="btn-group-vertical btn-group-lg m-2 position-absolute bottom-0 end-0" role="group" aria-label="Communauté">
     <a type="button" class="btn btn-secondary" href="./communaute/hdvente.html">Hôtel des ventes</a>
     <a type="button" class="btn btn-secondary" href="./communaute/forum.html">Forums</a>
-    <button type="button" class="btn btn-secondary">Guilde</button>
-    <button type="button" class="btn btn-secondary">Amis</button>
+    <a type="button" class="btn btn-secondary" href="./communaute/guilde.html">Guilde</a>
+    <a type="button" class="btn btn-secondary" href="./communaute/amis.html">Amis</a>
     <button type="button" class="btn btn-primary">Communauté</button>
   </div>
 </body>
