--- a/html/communaute/guilde.html
+++ b/html/communaute/guilde.html
@@ -8,8 +8,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </head>
 
-<body class="bg-dark vw-100">
-  <div class="container rounded d-flex flex-column ms-auto p-3 bg-secondary container">
+<body class="bg-dark p-5 vw-100">
+  <div class="container rounded d-flex flex-column ms-auto p-3 bg-secondary position-relative">
     <h1 class="text-center text-warning"> C'est pas safe: La guilde </h1>
     <div class="container rounded bg-dark p-0 d-flex flex-column">
       <div class="container rounded d-flex align-items-center justify-content-start w-auto m-2 bg-secondary text-decoration-none text-white">
@@ -63,12 +63,15 @@
             <button type="button" class="btn btn-primary btn-lg m-2">Amis</button>
           </div>
         </div>
-    <div class="container-fluid rounded d-flex align-items-center justify-content-around bg-secondary p-3 mb-2 position-absolute bottom-0 end-0 text-white" style="height: 65px;">
-      <span class="text-nowrap lead">Score guilde : 52</span>
-      <span class="text-nowrap lead">Membres 1/2</span>
-      <button type="button" class="btn btn-primary btn-lg m-2">Tournois</button>
-      <button type="button" class="btn btn-primary btn-lg m-2">Quitter guilde</button>
+      </div>
     </div>
+    <a type="button" class="btn-close bg-danger position-absolute top-0 end-0 translate-middle" aria-label="Home" href="../"></a>
+  </div>
+  <div class="container-fluid rounded d-flex align-items-center justify-content-around bg-secondary p-3 mb-2 position-absolute bottom-0 end-0 text-white" style="height: 65px;">
+    <span class="text-nowrap lead">Score guilde : 52</span>
+    <span class="text-nowrap lead">Membres 1/2</span>
+    <button type="button" class="btn btn-primary btn-lg m-2">Tournois</button>
+    <button type="button" class="btn btn-primary btn-lg m-2">Quitter guilde</button>
   </div>
 </body>
 
