Fixed the links between the pages

--- a/html/carte/booster.html
+++ b/html/carte/booster.html
@@ -11,7 +11,7 @@
 <body class="bg-dark vw-99 p-5 overflow-hidden">
   <div class="container rounded d-flex flex-row align-items-center bg-secondary position-relative mx-auto p-5">
     <button type="button" class="btn btn-primary btn-lg mx-auto">Ouvrir un Booster</button>
-    <a type="button" class="btn-close bg-danger position-absolute end-0 top-0 translate-middle" aria-label="Home" href="../"></a>
+    <a type="button" class="btn-close bg-danger position-absolute end-0 top-0 translate-middle" aria-label="Home" href="../index.html"></a>
   </div>
 </body>
 
