--- a/html/communaute/amis.html
+++ b/html/communaute/amis.html
@@ -8,7 +8,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </head>
 
-<body class="bg-dark p-5 vw-100">
+<body class="bg-dark p-5 vw-100 overflow-x-hidden">
   <div class="container rounded d-flex flex-column ms-auto p-3 bg-secondary position-relative">
     <h1 class="text-center"> Liste d'amis </h1>
     <div class="container rounded bg-dark p-0 d-flex flex-column">
@@ -60,7 +60,7 @@
           <button type="button" class="btn btn-primary btn-lg m-2">Chat</button>
         </div>
       </div>
-    <a type="button" class="btn-close bg-danger position-absolute top-0 end-0 translate-middle" aria-label="Home" href="../"></a>
+    <a type="button" class="btn-close bg-danger position-absolute top-0 end-0 translate-middle" aria-label="Home" href="../index.html"></a>
     </div>
   </div>
   <div class="container-fluid rounded d-flex align-items-center justify-content-end bg-secondary p-3 mb-2 position-absolute bottom-0 end-0" style="height: 65px;">
