--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,7 @@
 
     <div class="btn-group-vertical btn-group-lg mx-auto" role="group" aria-label="Partie">
       <button type="button" class="btn btn-primary">Tournoi</button>
-      <button type="button" class="btn btn-primary">Duel</button>
+      <a type="button" class="btn btn-primary" href="duel.html">Duel</a>
     </div>
   </div>
 
@@ -27,7 +27,7 @@
   </div>
 
   <div class="btn-group-vertical btn-group-lg m-2 position-absolute bottom-0 end-0" role="group" aria-label="Communauté">
-    <a type="button" class="btn btn-secondary" href="./communaute/hdvente.html">Hôtel des ventes</a>
+    <a type="button" class="btn btn-secondary" href="./communaute/hdventes.html">Hôtel des ventes</a>
     <a type="button" class="btn btn-secondary" href="./communaute/forum.html">Forums</a>
     <a type="button" class="btn btn-secondary" href="./communaute/guilde.html">Guilde</a>
     <a type="button" class="btn btn-secondary" href="./communaute/amis.html">Amis</a>
