Fixed the Deckbuilding tab

--- a/html/duel.html
+++ b/html/duel.html
@@ -79,7 +79,7 @@
     </div>
     <div class="container-fluid rounded d-flex align-items-center justify-content-around bg-secondary p-3 mb-2 text-white" style="height: 65px;">
       <button type="button" class="btn btn-primary btn-lg m-2">Fin du tour</button>
-      <button type="button" class="btn btn-primary btn-lg m-2" href = "index.html">Abandonner match</button>
+      <a type="button" class="btn btn-primary btn-lg m-2" href = "index.html">Abandonner match</a>
     </div>
   </div>
 </body>
