--- a/html/carte/construireDeck.html
+++ b/html/carte/construireDeck.html
@@ -10,10 +10,10 @@
 
 <body class="bg-dark vw-99 p-5 overflow-x-hidden">
   <div class="container rounded position-relative w-auto mx-auto p-3 m-0 bg-secondary">
-    <h1 class="text-center">Construire deck</h1>
+    <h1 class="text-center text-warning">Construire deck</h1>
     <hr/>
     <div class="container d-flex flex-row">
-      <div class="container rounded d-flex flex-column bg-dark text-center text-white">
+      <div class="container rounded d-flex flex-column bg-dark text-center">
         <div class="container m-1">
           <input type="text" placeholder="Nom carte"/>
         </div>
@@ -30,9 +30,9 @@
         </div>
         <hr/>
         <div class="container rounded d-flex flex-row flex-wrap justify-content-center bg-dark text-center">
-          <div class="card flex-shrink-0 m-2" style="width: 18rem;">
+          <div class="card flex-shrink-0 m-2" style="width: 13rem;">
             <!-- SVG placeholder -->
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="130" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
               <title>Placeholder</title>
               <rect width="100%" height="100%" fill="#868e96" style="--darkreader-inline-fill: #585f63;" data-darkreader-inline-fill=""></rect>
               <text x="35%" y="50%" fill="#dee2e6" dy=".3em" style="--darkreader-inline-fill: #d6d2cd;" data-darkreader-inline-fill="">Image cap</text>
@@ -43,9 +43,9 @@
               <a href="#" class="btn btn-primary">Ajouter</a>
             </div>
           </div>
-          <div class="card flex-shrink-0 m-2" style="width: 18rem;">
+          <div class="card flex-shrink-0 m-2" style="width: 13rem;">
             <!-- SVG placeholder -->
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="130" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
               <title>Placeholder</title>
               <rect width="100%" height="100%" fill="#868e96" style="--darkreader-inline-fill: #585f63;" data-darkreader-inline-fill=""></rect>
               <text x="35%" y="50%" fill="#dee2e6" dy=".3em" style="--darkreader-inline-fill: #d6d2cd;" data-darkreader-inline-fill="">Image cap</text>
@@ -56,9 +56,9 @@
               <a href="#" class="btn btn-primary">Ajouter</a>
             </div>
           </div>
-          <div class="card flex-shrink-0 m-2" style="width: 18rem;">
+          <div class="card flex-shrink-0 m-2" style="width: 13rem;">
             <!-- SVG placeholder -->
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="130" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
               <title>Placeholder</title>
               <rect width="100%" height="100%" fill="#868e96" style="--darkreader-inline-fill: #585f63;" data-darkreader-inline-fill=""></rect>
               <text x="35%" y="50%" fill="#dee2e6" dy=".3em" style="--darkreader-inline-fill: #d6d2cd;" data-darkreader-inline-fill="">Image cap</text>
@@ -69,9 +69,9 @@
               <a href="#" class="btn btn-primary">Ajouter</a>
             </div>
           </div>
-          <div class="card flex-shrink-0 m-2" style="width: 18rem;">
+          <div class="card flex-shrink-0 m-2" style="width: 13rem;">
             <!-- SVG placeholder -->
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="130" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
               <title>Placeholder</title>
               <rect width="100%" height="100%" fill="#868e96" style="--darkreader-inline-fill: #585f63;" data-darkreader-inline-fill=""></rect>
               <text x="35%" y="50%" fill="#dee2e6" dy=".3em" style="--darkreader-inline-fill: #d6d2cd;" data-darkreader-inline-fill="">Image cap</text>
@@ -82,9 +82,9 @@
               <a href="#" class="btn btn-primary">Ajouter</a>
             </div>
           </div>
-          <div class="card flex-shrink-0 m-2" style="width: 18rem;">
+          <div class="card flex-shrink-0 m-2" style="width: 13rem;">
             <!-- SVG placeholder -->
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="130" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
               <title>Placeholder</title>
               <rect width="100%" height="100%" fill="#868e96" style="--darkreader-inline-fill: #585f63;" data-darkreader-inline-fill=""></rect>
               <text x="35%" y="50%" fill="#dee2e6" dy=".3em" style="--darkreader-inline-fill: #d6d2cd;" data-darkreader-inline-fill="">Image cap</text>
@@ -95,9 +95,9 @@
               <a href="#" class="btn btn-primary">Ajouter</a>
             </div>
           </div>
-          <div class="card flex-shrink-0 m-2" style="width: 18rem;">
+          <div class="card flex-shrink-0 m-2" style="width: 13rem;">
             <!-- SVG placeholder -->
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="130" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
               <title>Placeholder</title>
               <rect width="100%" height="100%" fill="#868e96" style="--darkreader-inline-fill: #585f63;" data-darkreader-inline-fill=""></rect>
               <text x="35%" y="50%" fill="#dee2e6" dy=".3em" style="--darkreader-inline-fill: #d6d2cd;" data-darkreader-inline-fill="">Image cap</text>
@@ -108,9 +108,9 @@
               <a href="#" class="btn btn-primary">Ajouter</a>
             </div>
           </div>
-          <div class="card flex-shrink-0 m-2" style="width: 18rem;">
+          <div class="card flex-shrink-0 m-2" style="width: 13rem;">
             <!-- SVG placeholder -->
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="130" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
               <title>Placeholder</title>
               <rect width="100%" height="100%" fill="#868e96" style="--darkreader-inline-fill: #585f63;" data-darkreader-inline-fill=""></rect>
               <text x="35%" y="50%" fill="#dee2e6" dy=".3em" style="--darkreader-inline-fill: #d6d2cd;" data-darkreader-inline-fill="">Image cap</text>
@@ -121,9 +121,9 @@
               <a href="#" class="btn btn-primary">Ajouter</a>
             </div>
           </div>
-          <div class="card flex-shrink-0 m-2" style="width: 18rem;">
+          <div class="card flex-shrink-0 m-2" style="width: 13rem;">
             <!-- SVG placeholder -->
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="130" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
               <title>Placeholder</title>
               <rect width="100%" height="100%" fill="#868e96" style="--darkreader-inline-fill: #585f63;" data-darkreader-inline-fill=""></rect>
               <text x="35%" y="50%" fill="#dee2e6" dy=".3em" style="--darkreader-inline-fill: #d6d2cd;" data-darkreader-inline-fill="">Image cap</text>
@@ -136,14 +136,18 @@
           </div>
         </div>
       </div>
+      <div class="vr m-1"></div>
       <div class="container rounded d-flex flex-column bg-dark text-center text-white">
-        <div class="container rounded d-flex flex column text-center text-white">
-          <p>Carte 1</p>
+        <div class="container rounded d-flex flex-column justify-content-center">
+          <p class="text-center">Carte 1</p>
+          <p class="text-center">Carte 2</p>
+          <p class="text-center">Carte 3</p>
+          <p class="text-center">Carte 4</p>
         </div>
-        <p><Strong>1/20</Strong></p>
+        <hr/>
+        <p><Strong>4/20</Strong></p>
       </div>
     </div>
-    <a type="button" class="btn-close bg-danger position-absolute top-0 end-0 translate-middle" aria-label="Home" href="../"></a>
     <div class="container-fluid rounded d-flex align-items-center justify-content-around bg-secondary p-3 mb-2 text-white" style="height: 65px;">
       <button type="button" class="btn btn-primary btn-lg m-2">Créer</button>
       <button type="button" class="btn btn-primary btn-lg m-2">Annuler</button>
