Utilisation Vue.js

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   
   <body>
     <div id="app">
-      <h1>Vue.js Components Fundamentals</h1>
+      <h1>Premier thread</h1>
       
       <div id="blog-posts-demo" class="container rounded d-flex flex-column text-white w-auto p-1 m-2 bg-secondary">
         <textarea id="Texte" placeholder="Your message here..."></textarea>
