--- a/Forum/thread.html
+++ b/Forum/thread.html
@@ -10,7 +10,7 @@
   <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
 </head>
 
-<body class="bg-dark vw-99 p-5 overflow-hidden">
+<body class="bg-dark vw-99 p-5 overflow-x-hidden">
   <div class="container rounded d-flex flex-column ms-auto p-3 bg-secondary position-relative">
     <h1 id="thread-title" class="text-center">{{ threadname }}</h1>
 
@@ -36,6 +36,7 @@
       methods: {
         submit: function(message){
           addPost(this.threadid, "You", new Date().toLocaleString(), document.getElementById("Texte").value);
+          document.getElementById("Texte").value = "";
         }
       }
     });
