changed div to table

--- a/html/duel.html
+++ b/html/duel.html
@@ -27,53 +27,61 @@
       </div>
       <div class="container d-flex flex-column justift-content-evenly" style="width: 602px;">
         <h2 class="text-center text-danger"> Santé Mark = 18/20 </h2>
-        <div class="container border border-light" style="width:602px; height: 602px;">
-          <div class="row row-cols-auto">
-            <div class="border border-light" style="width: 120px; height: 120px;"></div>
-            <div class="border border-light" style="width: 120px; height: 120px;"></div>
-            <div class="border border-light" style="width: 120px; height: 120px;"></div>
-            <div class="border border-light" style="width: 120px; height: 120px;"></div>
-            <div class="border border-light" style="width: 120px; height: 120px;"></div>
-            <div class="border border-light" style="width: 120px; height: 120px;"></div>
-            <div class="border border-light" style="width: 120px; height: 120px;"></div>
-            <div class="border border-light" style="width: 120px; height: 120px;"></div>
-            <div class="border border-light" style="width: 120px; height: 120px;"></div>
-            <div class="border border-light" style="width: 120px; height: 120px;"></div>
-            <div class="border border-light" style="width: 120px; height: 120px;"></div>
-            <div class="border border-light" style="width: 120px; height: 120px;"></div>
-            <div class="border border-light" style="width: 120px; height: 120px;"></div>
-            <div class="border border-light" style="width: 120px; height: 120px;"></div>
-            <div class="border border-light" style="width: 120px; height: 120px;"></div>
-            <div class="border border-light" style="width: 120px; height: 120px;"></div>
-            <div class="border border-light" style="width: 120px; height: 120px;"></div>
-            <div class="border border-light" style="width: 120px; height: 120px;"></div>
-            <div class="border border-light" style="width: 120px; height: 120px;"></div>
-            <div class="border border-light" style="width: 120px; height: 120px;"></div>
-            <div class="border border-light" style="width: 120px; height: 120px;"></div>
-            <div class="border border-light" style="width: 120px; height: 120px;"></div>
-            <div class="border border-light" style="width: 120px; height: 120px;"></div>
-            <div class="border border-light" style="width: 120px; height: 120px;"></div>
-            <div class="border border-light" style="width: 120px; height: 120px;"></div>
-          </div>
-        </div>
+        <table class="container border border-light" style="width:602px; height: 602px;">
+          <tr>
+            <td class="border border-light" style="width: 120px; height: 120px;"></td>
+            <td class="border border-light" style="width: 120px; height: 120px;"></td>
+            <td class="border border-light" style="width: 120px; height: 120px;"></td>
+            <td class="border border-light" style="width: 120px; height: 120px;"></td>
+            <td class="border border-light" style="width: 120px; height: 120px;"></td>
+          </tr>
+          <tr>
+            <td class="border border-light" style="width: 120px; height: 120px;"></td>
+            <td class="border border-light" style="width: 120px; height: 120px;"></td>
+            <td class="border border-light" style="width: 120px; height: 120px;"></td>
+            <td class="border border-light" style="width: 120px; height: 120px;"></td>
+            <td class="border border-light" style="width: 120px; height: 120px;"></td>
+          </tr>
+          <tr>
+            <td class="border border-light" style="width: 120px; height: 120px;"></td>
+            <td class="border border-light" style="width: 120px; height: 120px;"></td>
+            <td class="border border-light" style="width: 120px; height: 120px;"></td>
+            <td class="border border-light" style="width: 120px; height: 120px;"></td>
+            <td class="border border-light" style="width: 120px; height: 120px;"></td>
+          </tr>
+          <tr>
+            <td class="border border-light" style="width: 120px; height: 120px;"></td>
+            <td class="border border-light" style="width: 120px; height: 120px;"></td>
+            <td class="border border-light" style="width: 120px; height: 120px;"></td>
+            <td class="border border-light" style="width: 120px; height: 120px;"></td>
+            <td class="border border-light" style="width: 120px; height: 120px;"></td>
+          </tr>
+          <tr>
+            <td class="border border-light" style="width: 120px; height: 120px;"></td>
+            <td class="border border-light" style="width: 120px; height: 120px;"></td>
+            <td class="border border-light" style="width: 120px; height: 120px;"></td>
+            <td class="border border-light" style="width: 120px; height: 120px;"></td>
+            <td class="border border-light" style="width: 120px; height: 120px;"></td>
+          </tr>
+        </table>
         <h2 class="text-center text-danger"> Votre santé = 12/20 </h2>
       </div>
       <div class="container border border-light m-2" style="width: 31px; height: 752px;">
         <div class="row">
-          <div class="border border-light" style="width: 30px; height: 150px;">a</div>
-          <div class="border border-light" style="width: 30px; height: 150px;">a</div>
-          <div class="border border-light" style="width: 30px; height: 150px;">a</div>
-          <div class="border border-light" style="width: 30px; height: 150px;">a</div>
-          <div class="border border-light" style="width: 30px; height: 150px;">a</div>
+          <div class="border border-light" style="width: 30px; height: 150px;"></div>
+          <div class="border border-light" style="width: 30px; height: 150px;"></div>
+          <div class="border border-light" style="width: 30px; height: 150px;"></div>
+          <div class="border border-light" style="width: 30px; height: 150px;"></div>
+          <div class="border border-light" style="width: 30px; height: 150px;"></div>
         </div>
       </div>
       <div class="container border border-light m-2" style="width: 31px; height: 752px;">
         <div class="row">
-          <div class="border border-light" style="width: 30px; height: 150px;">a</div>
-          <div class="border border-light" style="width: 30px; height: 150px;">a</div>
-          <div class="border border-light" style="width: 30px; height: 150px;">a</div>
-          <div class="border border-light" style="width: 30px; height: 150px;">a</div>
-          <div class="border border-light" style="width: 30px; height: 150px;">a</div>
+          <div class="border border-light" style="width: 30px; height: 150px;"></div>
+          <div class="border border-light" style="width: 30px; height: 150px;"></div>
+          <div class="border border-light" style="width: 30px; height: 150px;"></div>
+          <div class="border border-light" style="width: 30px; height: 150px;"></div>
+          <div class="border border-light" style="width: 30px; height: 150px;"></div>
         </div>
       </div>
     </div>
