--- a/Cartes/booster.html
+++ b/Cartes/booster.html
@@ -8,6 +8,13 @@
   <script type="text/javascript" src="Tirage.js" defer></script>
   
 </head>
+  <style>
+html *
+  {
+    color: #ffffff
+  } 
+</style>
+  
 <body class="bg-dark vw-99 p-5 overflow-hidden">
   <div id = "div1" class="container rounded d-flex flex-row align-items-center bg-secondary position-relative mx-auto p-5">
     <button type="button" onclick="tirage()" class="btn btn-primary btn-lg mx-auto">Ouvrir un Booster</button>
