Fixed a few mistakes on the deck buliding

--- a/html/carte/deck.html
+++ b/html/carte/deck.html
@@ -22,9 +22,9 @@
             <text x="35%" y="50%" fill="#dee2e6" dy=".3em" style="--darkreader-inline-fill: #d6d2cd;" data-darkreader-inline-fill="">Image cap</text>
           </svg>
           <div class="card-body">
-            <h5 class="card-title">Exodia le maudit part1/175</h5>
-            <p class="card-text">Il sert vraiement à rien pour l'instant</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title">Deck 1</h5>
+            <p class="card-text"></p>
+            <a href="#" class="btn btn-primary">Modifier</a>
           </div>
         </div>
       </div>
