--- a/NaturalTheScattering/src/main/resources/static/communaute/forum.html
+++ b/NaturalTheScattering/src/main/resources/static/communaute/forum.html
@@ -7,6 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css">
+  <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
 </head>
 
 <body class="bg-dark vw-100 p-5 overflow-x-hidden">
@@ -21,24 +22,26 @@
 
     <hr/>
 
-    <div class="container rounded bg-dark p-0">
-      <a class="container rounded d-flex flex-row w-auto p-1 m-2 bg-secondary text-decoration-none text-white" href="./thread.html">
-        <!-- author icon's -->
-        <svg xmlns="http://www.w3.org/2000/svg" width="3em" height="3em" fill="white" class="bi bi-person-circle" viewBox="0 0 16 16" title="Author Name">
-          <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
-          <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
-        </svg>
-        <div class="vr m-1"></div>
-        <span style="font-size: 2em;">Is Exodia le maudit that powerful?</span>
-        <div class="vr m-1 ms-auto"></div>
-        <svg xmlns="http://www.w3.org/2000/svg" width="3em" height="3em" fill="white" class="bi bi-chevron-right" viewBox="0 0 16 16">
-          <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
-        </svg>
-      </a>
+    <div id="threads-container" class="container rounded bg-dark p-0">
+      <thread-tile v-for="(thread, threadid) in threads" :key="threadid" :thread="thread" :threadid="threadid"></thread-tile>
     </div>
 
     <a type="button" class="btn-close bg-danger position-absolute top-0 end-0 translate-middle" aria-label="Home" href="../index.html"></a>
   </div>
+
+  <script src="forum.js"></script>
+  <script>
+    const vm = new Vue({
+      el: "#threads-container",
+      data: {
+        threads: threads,
+      },
+    });
+
+    function tmp(test) {
+      alert(test);
+    }
+  </script>
 </body>
 
 </html>
