--- a/html/communaute/amis.html
+++ b/html/communaute/amis.html
@@ -24,7 +24,7 @@
         </svg>
         <div class="vr m-1"></div>
         <div class="container-sm w-auto d-flex align-items-center">
-          <span class="text-nowrap fs-5"><strong>Billy guerrier du 54</strong></span>
+          <span class="text-nowrap fs-5"><strong>Seashanty</strong></span>
         </div>
         <div class="vr m-1"></div>
         <div class="container-sm w-auto d-flex align-items-center">
@@ -48,11 +48,11 @@
         </svg>
         <div class="vr m-1"></div>
         <div class="container-sm w-auto d-flex align-items-center">
-          <span class="text-nowrap fs-5"><strong>Eric Zemmour</strong></span>
+          <span class="text-nowrap fs-5"><strong>ZetanChamp</strong></span>
         </div>
         <div class="vr m-1"></div>
         <div class="container-sm w-auto d-flex align-items-center">
-          <span class="lead text-nowrap">Votants : 999999</span>
+          <span class="lead text-nowrap">Score : 99999</span>
         </div>
         <div class="container d-flex justify-content-end align-item-center">
           <button type="button" class="btn btn-primary btn-lg m-2">Stat</button>
