Mise à jour graphique

--- a/NaturalTheScattering/src/main/resources/static/carte/deck.html
+++ b/NaturalTheScattering/src/main/resources/static/carte/deck.html
@@ -21,17 +21,16 @@
             <rect width="100%" height="100%" fill="#868e96" style="--darkreader-inline-fill: #585f63;" data-darkreader-inline-fill=""></rect>
             <text x="35%" y="50%" fill="#dee2e6" dy=".3em" style="--darkreader-inline-fill: #d6d2cd;" data-darkreader-inline-fill="">Image cap</text>
           </svg>
-          <div class="card-body">
-            <h5 class="card-title">Exodia le maudit</h5>
-            <p class="card-text">Il est puissant... j'imagine?</p>
-            <a href="#" class="btn btn-primary">Description</a>
+          <div class="card-body align-content-center">
+            <h5 class="card-title m-2">Deck 1</h5>
+            <button type="button" class="btn btn-primary btn-lg m-2">Modifier Deck</button>
+            <button type="button" class="btn btn-primary btn-lg m-2">Supprimer deck</button>
           </div>
         </div>
       </div>
     </div>
     <div class="container-fluid rounded d-flex align-items-center justify-content-around bg-secondary p-3 mb-2 text-white" style="height: 65px;">
       <button type="button" class="btn btn-primary btn-lg m-2" onclick="deckBuild();">Créer deck</button>
-      <button type="button" class="btn btn-primary btn-lg m-2">Supprimer deck</button>
     </div>
     <script type="text/javascript">
       function deckBuild() {
